add coverByTile functionality
- add test for it

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "algorithms implementation",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/.bin/_mocha --require should --recursive ./test"
+    "test": "node ./node_modules/mocha/bin/mocha --require should --recursive ./test"
   },
   "repository": {
     "type": "git",
