--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "algorithms implementation",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha --require should --recursive ./test"
+    "test": "eslint **.js && node ./node_modules/mocha/bin/mocha --require should --recursive ./test",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/PavelMelnyk/algorithms#readme",
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.2.0",
     "should": "^11.2.1"
   }
