--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "algorithms implementation",
   "main": "index.js",
   "scripts": {
-    "test": "eslint **.js && node ./node_modules/mocha/bin/mocha --require should --recursive ./test",
+    "test": "eslint ./ && node ./node_modules/mocha/bin/mocha --require should --recursive ./test",
     "lint": "eslint ./"
   },
   "repository": {
